[package]
name = "xor-utils"
version = "0.7.0"
authors = ["gavyn <gavyn.riebau@gmail.com>"]
description = "Utility functions related to xor encryption / decryption"
license = "MIT"

documentation = "https://docs.rs/xor-utils"
homepage = "https://github.com/gavynriebau/xor-utils"
repository = "https://github.com/gavynriebau/xor-utils"

keywords = ["xor", "cryptography", "encryption", "decryption"]
categories = ["cryptography"]

[dependencies]
hamming = "0.1"
log = "0.4"
